--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -92,6 +92,7 @@
         <action
             android:id="@+id/action_list_bought_to_buy_credit_card2"
             app:destination="@id/buy_credit_card" />
+        <deepLink app:uri="android-app://co.com.japl.finanzas.module.app/listBought"/>
     </fragment>
 
     <fragment
@@ -104,6 +105,8 @@
             android:id="@+id/action_list_periods_to_list_bought"
             app:destination="@id/list_bought"
             app:popUpToInclusive="true"/>
+
+
     </fragment>
 
     <fragment
