--- a/CreditCardModule/src/main/res/values/value.xml
+++ b/CreditCardModule/src/main/res/values/value.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <string name="wallet_buy">Compra de Cartera</string>
+    <string name="cash_advance">Avance</string>
     <string name="create">Crear</string>
     <string name="update">Actualizar</string>
     <string name="credit_card">Tarjeta de crédito</string>
@@ -12,6 +15,10 @@
     <string name="setting_redirect">Ir a configuraciones</string>
     <string name="name">Nombre</string>
     <string name="value">Valor</string>
+    <string name="kind_rate">Tipo de tasa</string>
+    <string name="months">meses</string>
+    <string name="disabled">Desabilitar</string>
+    <string name="enabled">Habilitar</string>
 
     <string name="total_quote_value_short">Tot Cuota</string>
     <string name="interest_value_short">Interes</string>
@@ -33,6 +40,7 @@
     <string name="item_select_setting_redifer">1. Rediferir</string>
     <string name="item_select_setting_special_tax">2. Tasas Especiales</string>
     <string name="add_credit_card_setting">Agregar</string>
+    <string name="add_credit_rate">Agregar tasa de credito</string>
 
     <string name="toast_successful_update">Se actualizo el registros satisfactoriamente</string>
     <string name="toast_dont_successful_update">No se actualizo el registro</string>
@@ -40,6 +48,10 @@
     <string name="toast_successful_insert">Se inserto el registro satisfactoriamente</string>
     <string name="toast_dont_successful_deleted">No se elimino el registro</string>
     <string name="toast_successful_deleted">Se elimino el registro</string>
+    <string name="toast_successful_enabled">Se ha habilidato el registro correctamente</string>
+    <string name="toast_dont_successful_enabled">No se logro habilitar el registro</string>
+    <string name="toast_successful_disabled">Se ha desabilitado el registro satisfactoriamente</string>
+    <string name="toast_dont_successful_disabled">No se logro desabilitar el registro</string>
 
     <string name="navigate_list_credit_card_setting">android-app://co.com.japl.finanzas.module.app/list_credit_card_setting?codeCreditCard=%d</string>
     <string name="navigate_credit_card">android-app://co.com.japl.finanzas.module.app/credit_card?codeCreditCard=%d</string>
@@ -47,6 +59,8 @@
     <string name="navigate_credit_card_setting_create">android-app://co.com.japl.finanzas.module.app/credit_card_setting?codeCreditCard=%d</string>
     <string name="navigate_credit_card_setting">android-app://co.com.japl.finanzas.module.app/credit_card_setting?codeCreditCard=%d&amp;idSetting=%d</string>
     <string name="navigate_list_bought">android-app://co.com.japl.finanzas.module.app/listBought?codeCreditCard=%d&amp;cutOffDay=%d&amp;cutOff=%s</string>
+    <string name="navigate_list_credit_rate">android-app://co.com.japl.finanzas.modulo.app/credit_rate</string>
+    <string name="navigate_list_credit_rate_with_code_credit_card">android-app://co.com.japl.finanzas.modulo.app/credit_rate?codeCreditCard=%d</string>
 
     <string-array name="Months">
         <item>--- Seleccionar --- </item>
