--- a/app/src/main/res/layout/fragment_taxes.xml
+++ b/app/src/main/res/layout/fragment_taxes.xml
@@ -1,178 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/padding_page"
-    tools:context=".finanzas.controller.taxes.Taxes">
-    <ScrollView
+    tools:context=".finanzas.controller.taxes.Taxes"
+    android:orientation="vertical">
+
+    <androidx.compose.ui.platform.ComposeView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="@dimen/radius_corner"
-        app:strokeWidth="@dimen/stroke_with"
-        app:cardElevation="@dimen/card_elevator">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="@dimen/space_min"
-            android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:id="@+id/cv_component_fts"/>
 
-
-            <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:endIconMode="clear_text"
-                        android:layout_margin="@dimen/space_min"
-                        android:hint="@string/credit_card">
-
-                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                        android:id="@+id/spCreditCardTaxes"
-                        android:layout_width="match_parent"
-                        android:paddingStart="20dp"
-                        android:layout_height="wrap_content"
-                        android:textAlignment="center"
-                        />
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/space_min"
-                        app:endIconMode="clear_text"
-                        android:hint="@string/kind_of_tax">
-
-                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                        android:id="@+id/spKindTaxes"
-                        android:paddingStart="20dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textAlignment="center"/>
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/space_min"
-                        app:endIconMode="clear_text"
-                        android:hint="@string/month">
-
-                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                        android:id="@+id/spMonthTaxes"
-                        android:paddingStart="20dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textAlignment="center"/>
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/space_min"
-                        app:endIconMode="clear_text"
-                        android:hint="@string/year">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/edYearTaxes"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="numberSigned"
-                        android:hint="@string/year_hint"
-                        android:textAlignment="textEnd" />
-                    </com.google.android.material.textfield.TextInputLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/space_min"
-                        android:layout_weight="1"
-                        app:endIconMode="clear_text"
-                        app:suffixText="%"
-                        android:hint="@string/tax">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/edTaxesTaxes"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="numberDecimal"
-                        android:hint="@string/integer_hint"
-                        android:textAlignment="textEnd" />
-                        </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:layout_margin="@dimen/space_min"
-                android:layout_weight="2"
-                app:endIconMode="clear_text">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_kind_of_tax_txs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:focusable="false"
-                    android:hint="@string/kind_of_tax"
-                    android:textAlignment="textEnd"
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
-            </LinearLayout>
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/llPeriodsTaxes"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/space_min"
-                        app:endIconMode="clear_text"
-                        android:hint="@string/periods">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/etPeriodsTaxes"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ems="3"
-                        android:hint="@string/months_number_hint"
-                        android:inputType="numberSigned"
-                        android:textAlignment="textEnd" />
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layout_constraintBottom_toBottomOf="parent">
-
-                    <Button
-                        android:id="@+id/btnClearTaxes"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/space_min"
-                        app:icon="@drawable/ic_baseline_cleaning_services_24"
-                        android:layout_weight="1"
-                        android:text="@string/clear" />
-
-                    <Button
-                        android:id="@+id/btnSaveTaxes"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/space_min"
-                        app:icon="@android:drawable/ic_menu_save"
-                        android:layout_weight="1"
-                        android:text="@string/save" />
-
-
-                </LinearLayout>
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
-    </ScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
